# windows-process-monitor

./: .gitignore  .gitmodules  CMakeLists.txt  license.txt  readme.md
Common/: CMakeLists.txt
Common/include/: Controls.h  Types.h
ProcMonGUI/: CMakeLists.txt
ProcMonGUI/res/: ProcMonGUI.rc  ProcMonGUI.rc2
ProcMonGUI/src/: CallBackList.cpp  CallBackList.h  Callbacks.cpp  Callbacks.h  ErrorDispatcher.cpp  ErrorDispatcher.h  ProcMonGUI.cpp  ProcMonGUI.h  ProcMonGUIDlg.cpp  ProcMonGUIDlg.h  pch.h  targetver.h
ProcessDll/: CMakeLists.txt
ProcessDll/include/: Common.h  ProcessMonitor.h  Processdll.h  Utils.h
ProcessDll/src/: ProcessMonitor.cpp  Processdll.cpp  ServiceController.cpp  ServiceController.h  Utils.cpp  dllmain.cpp  pch.h
ProcessMonitor/: CMakeLists.txt
ProcessMonitor/src/: Debug.h  NtDefinitions.h  ProcessHelper.cpp  ProcessHelper.h  ProcessMonitor.cpp  ProcessMonitor.h  Sync.h  Utils.cpp  Utils.h  main.cpp  pch.h
src/: ddk_build.bat  procmon.sln
src/Common/DrvCppLib/: DrvCppLib.idc  DrvCppLib.vcproj  LibCpp.cpp  Ptd.c  copy_objects.cmd  cppstub_i386.cpp  cstub_i386.c  libcpp.h  makefile.inc  new.h  ptd.h  sources  sources.x64  strcpy_s.c  stub_amd64.asm  typeinfo.h  winexcpt.h
src/Common/DrvSTLPort/: deque  iterator  list  map  new  set  stack  stdexcept  string
src/Common/DrvSTLPort/config/: stl_msvc.h  stlcomp.h
src/Common/DrvSTLPort/stl/: _algo.c  _algo.h  _algobase.c  _algobase.h  _alloc.c  _alloc.h  _alloc_old.h  _auto_ptr.h  _bvector.h  _cmath.h  _config.h  _construct.h  _deque.c  _deque.h  _epilog.h  _function.h  _function_base.h  _hash_map.h  _hashtable.c  _hashtable.h  _heap.c  _heap.h  _iterator.h  _iterator_base.h  _list.c  _list.h  _new.h  _numeric.c  _prolog.h  _range_errors.h  _relops_cont.h  _set.h  _site_config.h  _tree.c  _tree.h  _vector.c  _vector.h  type_traits.h
src/Common/includes/: controls.h  types.h
src/ProcMonGUI/: CallBackList.cpp  CallBackList.h  Callbacks.cpp  Callbacks.h  ErrorDispatcher.cpp  ErrorDispatcher.h  ProcMonGUI.aps  ProcMonGUI.cpp  ProcMonGUI.h  ProcMonGUI.rc  ProcMonGUI.vcproj  ProcMonGUIDlg.cpp  ProcMonGUIDlg.h  ReadMe.txt  resource.h  stdafx.cpp
src/processdll/: ProcessMonitor.cpp  ProcessMonitor.h  ServiceController.cpp  ServiceController.h  common.h  dllmain.cpp  export.def  processdll.cpp  processdll.h  processdll.vcproj  utils.cpp  utils.h
src/procmon/: NtDefinitions.h  ProcessHelper.cpp  ProcessHelper.h  ProcessMonitor.cpp  ProcessMonitor.h  debug.h  main.cpp  procmon.vcproj  sources  sources.x32  sources.x64  sync.h  utils.cpp  utils.h
